=======
CHANGES
=======

3.5.1 (unreleased)
------------------

- ...

3.5.0 (2009-02-01)
------------------

- Adjusted tests so that basic objects and interfaces are pulled from
  `zope.site` and `zope.location` rather than `zope.app.component`.


3.4.0 (2007-10-27)
------------------

- Initial release independent of the main Zope tree.