@@ -47,12 +47,13 @@ setup(name = 'zope.app.undo',
       packages=find_packages('src'),
       package_dir = {'': 'src'},
       namespace_packages=['zope', 'zope.app'],
-      extras_require = dict(test=['zope.app.testing',
-                                  'zope.app.component',
+      extras_require = dict(test=['zope.app.component',
+                                  'zope.app.testing',
+                                  'zope.principalregistry',
                                   'zope.site',
                                   'zope.testing']),
       install_requires = ['setuptools',
-                          'zope.app.security',
+                          'zope.authentication',
                           'zope.component',
                           'zope.interface',
                           'zope.location',
