@@ -1,5 +1,0 @@
-# Tell zpkg how to install the ZCML slugs.
-
-<data-files zopeskel/etc/package-includes>
-  undo-*.zcml
-</data-files>
